--- a/ansible/roles/tileserver_step2/templates/tiles.openrailwaymap.org.conf
+++ b/ansible/roles/tileserver_step2/templates/tiles.openrailwaymap.org.conf
@@ -1,6 +1,6 @@
 # destination location of this file: /etc/apache2/sites-available
 <VirtualHost *:80>
-    {% if 'letsencrypt' in group_names %}
+    {% if letsencrypt %}
       ServerName tiles.openrailwaymap.org
       ServerAlias a.tiles.openrailwaymap.org
       ServerAlias b.tiles.openrailwaymap.org
@@ -16,7 +16,7 @@
         Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -27,7 +27,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
 {% endif %}
 </VirtualHost>
