--- a/ansible/roles/website/templates/www.openrailwaymap.org.conf
+++ b/ansible/roles/website/templates/www.openrailwaymap.org.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    {% if 'letsencrypt' in group_names %}
+    {% if letsencrypt %}
     ServerName {{ website_hostname }}
     {% for host_alias in website_hostname_aliases -%}
     ServerAlias {{ host_alias }}
@@ -10,7 +10,7 @@
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -21,7 +21,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
-    {% if 'letsencrypt' in group_names %}
+    {% if letsencrypt %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     {% endif %}
 </VirtualHost>
