--- a/ansible/roles/website/templates/api.openrailwaymap.org.conf
+++ b/ansible/roles/website/templates/api.openrailwaymap.org.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    {% if 'letsencrypt' in group_names %}
+    {% if letsencrypt %}
     ServerName {{ api_hostname }}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
@@ -7,7 +7,7 @@
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -18,7 +18,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
-    {% if 'letsencrypt' in group_names %}
+    {% if letsencrypt %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     {% endif %}
 </VirtualHost>
