--- a/ansible/roles/blog/templates/blog.openrailwaymap.org.conf
+++ b/ansible/roles/blog/templates/blog.openrailwaymap.org.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
     ServerName {{ blog.hostname }}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
@@ -7,7 +7,7 @@
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
 {% endif %}
 </VirtualHost>
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
 
 <VirtualHost *:443>
     SSLEngine on
@@ -19,7 +19,7 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
-{% if 'letsencrypt' in group_names %}
+{% if letsencrypt %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
 {% endif %}
 </VirtualHost>
