Adapt "letsencrypt" playbook to new structure

--- a/ansible/includes/redirect-and-acme-challenge-includes.yml
+++ b/ansible/includes/redirect-and-acme-challenge-includes.yml
@@ -1,27 +1,16 @@
 # SPDX-License-Identifier: MIT
-- name: Enable Apache module rewrite
+- name: Enable Apache module rewrite and alias
   apache2_module:
-    name: 'rewrite'
+    name: '{{ item }}'
     state: present
+  loop:
+    - rewrite
+    - alias
   notify:
     - systemd restart apache2
 
-- name: 'Apache2 ACME challenges: configuration file for inclusion'
-  copy:
-    dest: '/etc/apache2/sites-available/letsencrypt-acme-challenges.inc'
-    owner: root
-    group: root
-    mode: 0644
-    content: |
-      Alias "/.well-known/acme-challenge/" "/var/lib/acme/challenges/"
-      <Directory /var/lib/acme/challenges>
-          Require all granted
-      </Directory>
-  notify:
-    - systemd reload apache2
-  when: "'letsencrypt' in group_names"
-
 - name: 'Apache2 redirect 80 → 443: configuration file for inclusion'
+  when: "'letsencrypt' in group_names"
   copy:
     dest: '/etc/apache2/sites-available/redirect-http.inc'
     owner: root
@@ -34,4 +23,3 @@
       RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
   notify:
     - systemd reload apache2
-  when: "'letsencrypt' in group_names"
