--- a/ansible/roles/blog/templates/blog.openrailwaymap.org.conf
+++ b/ansible/roles/blog/templates/blog.openrailwaymap.org.conf
@@ -1,7 +1,6 @@
 <VirtualHost *:80>
-{% if letsencrypt %}
+{% if 'letsencrypt' in group_names %}
     ServerName {{ blog.hostname }}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
 {% else %}
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
@@ -19,8 +18,5 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
-{% if letsencrypt %}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
-{% endif %}
 </VirtualHost>
 {% endif %}
