--- a/ansible/roles/letsencrypt/templates/acme_scripts_config.cfg
+++ b/ansible/roles/letsencrypt/templates/acme_scripts_config.cfg
@@ -2,10 +2,10 @@
 #
 # Domain to get certificates for
 # This variable will be used for paths and not for certificate signing requests
-DOMAIN="{{ ssl_domain }}"
+DOMAIN="{{ letsencrypt.ssl_domain }}"
 
 # Domains the certificate should be valid for
-SUBJECT_ALT_NAMES="{{ certificate_alt_names }}"
+SUBJECT_ALT_NAMES="{{ letsencrypt.certificate_alt_names }}"
 
 # Working directory for certificat signing requests, created certificates etc. Final certificates will be moved to their final location in /etc later
 ACME_WORKING_DIR=/var/lib/acme
