--- a/ansible/roles/tileserver_step2/templates/tiles.openrailwaymap.org.conf
+++ b/ansible/roles/tileserver_step2/templates/tiles.openrailwaymap.org.conf
@@ -1,6 +1,6 @@
 # destination location of this file: /etc/apache2/sites-available
 <VirtualHost *:80>
-    {% if letsencrypt %}
+    {% if 'letsencrypt' in group_names %}
       ServerName tiles.openrailwaymap.org
       ServerAlias a.tiles.openrailwaymap.org
       ServerAlias b.tiles.openrailwaymap.org
@@ -10,7 +10,6 @@
       {% for host_alias in website_hostname_aliases -%}
         ServerAlias {{ host_alias }}
       {% endfor %}
-        Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
         Include /etc/apache2/sites-available/redirect-http.inc
       {% else %}
         Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
@@ -27,8 +26,5 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
-{% if letsencrypt %}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
-{% endif %}
 </VirtualHost>
 {% endif %}
