--- a/ansible/roles/website/templates/api.openrailwaymap.org.conf
+++ b/ansible/roles/website/templates/api.openrailwaymap.org.conf
@@ -1,7 +1,6 @@
 <VirtualHost *:80>
-    {% if letsencrypt %}
+    {% if 'letsencrypt' in group_names %}
     ServerName {{ api_hostname }}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
     {% else %}
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
@@ -18,8 +17,5 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
-    {% if letsencrypt %}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
-    {% endif %}
 </VirtualHost>
 {% endif %}
