--- a/ansible/roles/website/templates/www.openrailwaymap.org.conf
+++ b/ansible/roles/website/templates/www.openrailwaymap.org.conf
@@ -1,10 +1,9 @@
 <VirtualHost *:80>
-    {% if letsencrypt %}
+    {% if 'letsencrypt' in group_names %}
     ServerName {{ website_hostname }}
     {% for host_alias in website_hostname_aliases -%}
     ServerAlias {{ host_alias }}
     {% endfor %}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
     {% else %}
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
@@ -21,8 +20,5 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
-    {% if letsencrypt %}
-    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
-    {% endif %}
 </VirtualHost>
 {% endif %}
